:sparkles: Add func of create reservation
